# BMAD-METHOD

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  jest.config.js  package.json  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
bmad-core/agents/: tdd.md
bmad-core/tasks/: enforce-tdd-cycle.md  run-tests-feedback.md  validate-test-first.md
bmad-core/templates/: test-plan-tmpl.yaml
configs/: example.yaml
core/: cli.py
core/config/: loader.py
core/engine/: simulation_engine.py
core/metrics/: collector.py
core/report/: report_generator.py
docs/: PROJECT-OVERVIEW.md  tdd-agent.md  testing-guide.md
docs/architecture/: ARCHITECTURE.md
docs/prd/: PRD.md
docs/prd/sections/: requirements-functional.md  requirements-nonfunctional.md  user-stories.md  vision.md
tests/: tdd-agent.test.js  test_engine.py
